# vemeego

./: .gitignore
backend/: .env.example  .gitignore  README.md  SETUP_GUIDE.md  check_setup.py  db_structure.txt  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  exceptions.py  logger.py  supabase_client.py
backend/app/middleware/: auth.py
backend/app/models/: meeting.py  message.py  organization.py  user.py
backend/app/routers/: auth.py  meetings.py  messaging.py  organizations.py  storage.py
backend/app/services/: auth_service.py  meeting_service.py  messaging_service.py
backend/docs/: 00-IMPLEMENTATION-OVERVIEW.md  01-AUTHENTICATION-AUTHORIZATION.md  02-DATABASE-DESIGN.md  03-FILE-STORAGE.md  04-REALTIME-MESSAGING.md  05-API-DESIGN-STANDARDS.md  CODE_REVIEW_REPORT.md  README.md
backend/migrations/: 001_initial_schema.sql  002_messaging_schema.sql  003_fix_messaging_foreign_keys.sql  004_enable_realtime_and_fix_status.sql  005_debug_disable_rls.sql  006_revert_rls_disable.sql  007_add_conversation_update_policy.sql  008_restore_users_policies.sql  009_create_storage_buckets.sql  010_fix_rls_and_storage.sql  014_broadcast_messages.sql  015_broadcast_call_notifications.sql  017_meeting_auto_end_and_missed_calls.sql
backend/scripts/: README.md  approve_user.py  cleanup_super_admin.py  create_super_admin.py  run_migration.py  update_org_limit.py
frontend/: .env.example  package.json
frontend/plugins/visual-edits/: dev-server-setup.js
frontend/public/: index.html
frontend/src/: App.tsx  config.ts  mockData.ts
(+31 files in other folders)
